Source/WebCore/dom/DocumentType.h
@@ -49,7 +49,6 @@ public:
 private:
     DocumentType(Document&, const String& name, const String& publicId, const String& systemId);
 
-    virtual URL baseURI() const override;
     virtual String nodeName() const override;
     virtual NodeType nodeType() const override;
     virtual Ref<Node> cloneNodeInternal(Document&, CloningOperation) override;
